add fe jemolloc